Fix: OEditor tooltips appear blurry and low-res.
Remove will-change hint so browser actually renders tooltips
legibly, rather than doing lazy-evaluation that appears to
never actually complete/succeed.

	Change on 2016/09/26 by mgainer <mgainer@google.com>

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=134340679

--- a/coursebuilder/modules/admin/_static/css/courses.css
+++ b/coursebuilder/modules/admin/_static/css/courses.css
@@ -96,6 +96,7 @@
   text-align: left;
   max-width: 400px;
   margin-left: -300px !important;
+  will-change: unset;
 }
 
 .gcb-list-select-course {
